<resources>
    <string name="app_name">Contact Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="c_creator">Contact Creator</string>
    <string name="c_name">Name</string>
    <string name="c_phnum">Phone Number</string>
    <string name="c_email">Email</string>
    <string name="c_addr">Address</string>
    <string name="add_c">Add Contact</string>
    <string name="c_list">Contact List</string>


</resources>
