<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:id="@+id/tab_creator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/c_creator"
                        android:id="@+id/ContactCreator_title"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imgViewDefault"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/no_user" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/Contact_name"
                        android:layout_marginTop="15dp"
                        android:hint="@string/c_name" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/Contact_phone"
                        android:layout_marginTop="15dp"
                        android:hint="@string/c_phnum" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/Contact_email"
                        android:layout_marginTop="15dp"
                        android:hint="@string/c_email"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/Contact_address"
                        android:layout_marginTop="15dp"
                        android:hint="@string/c_addr"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textPostalAddress" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_c"
                        android:id="@+id/btn_add"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:enabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_contactlist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:focusableInTouchMode="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="My Contacts"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Contacts"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="5dp" />
        android:layout_gravity="center_horizontal" />
        -->

</LinearLayout>
